# clay

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  start_proxy.py  start_proxy.sh  test_cancellation.py
.github/workflows/: ci.yml  cleanup.yml  docker-images.yml
app/: AGENTS.md  __init__.py  main.py
app/api/: AGENTS.md  endpoints.py
app/conversion/: AGENTS.md  request_converter.py  response_converter.py
app/core/: AGENTS.md  client.py  config.py  constants.py  logging.py  model_manager.py  model_mapper.py
app/models/: AGENTS.md  claude.py  openai.py
docs/: anthropic-openai-tool-mapping-plan.md
src/: AGENTS.md  main.py
src/api/: AGENTS.md  endpoints.py
src/conversion/: AGENTS.md  request_converter.py  response_converter.py
src/core/: AGENTS.md  client.py  config.py  model_manager.py
src/models/: AGENTS.md  claude.py
tests/: AGENTS.md  test_client_metadata_fallback.py  test_main.py
