[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "clay"
version = "1.0.0"
description = "Clay proxy for Claude-compatible and OpenAI-compatible API providers"
license = { text = "MIT" }
keywords = ["proxy", "fastapi", "anthropic", "openai", "compatibility"]
authors = [
    { name = "Clay", email = "noreply@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.54.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
    "pyinstaller>=6.15.0",
]

[project.urls]
Homepage = "https://github.com/coachpo/clay"
Repository = "https://github.com/coachpo/clay.git"
Issues = "https://github.com/coachpo/clay/issues"

[project.scripts]
clay = "src.main:main"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
    "pyinstaller>=6.15.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/start_proxy.py",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["F"]
